Resolved issue of stucking at Login page,Movie Add page and Genre add page. Still the styling is very bad. Need to do. Also make sure changes are done in API responses.

--- a/client/fynd_client/src/components/SideBar/Tags/Tags.module.css
+++ b/client/fynd_client/src/components/SideBar/Tags/Tags.module.css
@@ -1,5 +1,6 @@
 .Tags{
   margin : 5px;
+  cursor: pointer !important;
 }
 
 .Tags :hover{
